# ticketService

./: .gitignore  docker-compose.yml
auth/: .example_env  .gitignore  Dockerfile  conftest.py  docker-compose.yml  init_mongo.py  main.py  mypy.ini  pyproject.toml
auth/src/apps/: router.py
auth/src/core/: auth.py  config.py  dao.py  database.py  model.py  schemas.py
auth/tests/: test_auth.py
auth/tests/e2e/: test_api.py
events/: Dockerfile  Makefile  config.py  conftest.py  docker-compose.yml  main.py  middleware.py  mypy.ini  pyproject.toml  setup_logger.py
events/migration/: env.py
events/migration/versions/: 260fcfea2757_initial_revision.py  b3c353ec2e6e_initial_revision.py
events/src/apps/: router.py
events/src/core/: dao.py  database.py  handlers.py  models.py  producer.py  schemas.py
events/tests/e2e/: test_api.py
orders/: .dockerignore  .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
orders/migration/: env.py
orders/migration/versions/: 3f750fe9c90a_initial_revision.py  7907c65fc6aa_initial_revision.py  87c29e22f8da_initial_revision.py  b0a4a99ec596_initial_revision.py
orders/src/allocation/adapters/: orm.py  repository.py
orders/src/allocation/domain/: commands.py  model.py
orders/src/allocation/entrypoints/: router.py
orders/src/allocation/service_layer/: handlers.py  unit_of_work.py
