[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.8.0",
    "bcrypt==4.0.1",
    "beanie>=1.29.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "motor>=3.7.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.10.6",
    "pymongo>=4.11.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "python-jose>=3.4.0",
    "requests>=2.32.3",
    "testcontainers[mongodb]>=4.9.2",
    "types-passlib>=1.7.7.20250319",
    "types-python-jose>=3.4.0.20250224",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
    asyncio_mode = "auto"
    filterwarnings = [
        "ignore: The event_loop fixture provided by pytest-asyncio has been redefined.*:DeprecationWarning",
        "ignore: Setting per-request cookies.*:DeprecationWarning",
        "ignore: 'crypt' is deprecated and slated for removal.*:DeprecationWarning",
    ]
    markers = [
        "e2e",
        "unit",
    ]

[dependency-groups]
dev = [
    "debugpy>=1.8.13",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]

[tool.ruff]
    line-length = 130
    target-version = "py311"

[tool.ruff.lint]
    select = [
        "E",  
        "F", 
        "W", 
        "I",  
        "B",  
        "C",  
        "UP", 
        "PL",  
        "RUF",
    ]

[tool.ruff.lint.isort]
    known-first-party = ["src"]
    lines-after-imports = 2
    combine-as-imports = true
    force-sort-within-sections = true
    order-by-type = true
