[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pika>=1.3.2",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.10.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "types-passlib>=1.7.7.20250319",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
    asyncio_mode = "auto"
    filterwarnings = [
        "ignore: The event_loop fixture provided by pytest-asyncio has been redefined.*:DeprecationWarning",
        "ignore: Setting per-request cookies.*:DeprecationWarning",
        "ignore: 'crypt' is deprecated and slated for removal.*:DeprecationWarning",
    ]
    markers = [
        "e2e",
        "unit",
    ]

[dependency-groups]
dev = [
    "debugpy>=1.8.13",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]


# Ruff settings
[tool.ruff]
    # Exclude a variety of commonly ignored directoryes 
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]

    line-length = 130
    indent-width = 4

    target-version = "py312"


[tool.ruff.lint]
    select = [
        "E",   
        "F",  
        "B",    
        "Q",   
        "C90",  
        "W",   
        "I",   
        "UP", 
        "N",    
        "PL",   
    ]

    ignore = [
        "D203", 
        "D212", 
        "E501", 
        "B008",
        "RUF001",
    ]

    fixable = ["ALL"]
    unfixable = ["B"]


[tool.ruff.lint.per-file-ignores]
    "__init__.py" = ["E402"]
    "tests/*" = ["E402", "D"]


[tool.ruff.format]
    quote-style = "double" 
    indent-style = "space" 
    skip-magic-trailing-comma = false 
    line-ending = "auto" 
    docstring-code-format = true 
    docstring-code-line-length = 72 


[tool.ruff.lint.isort]
    known-first-party = ["src"]
    lines-after-imports = 2
    combine-as-imports = false
    force-sort-within-sections = true
    order-by-type = true
    case-sensitive = true

